# eko

./: .env  pyproject.toml  readme.md  screenshot_tool.py  script.js  script.py
app/: discord_bot.py  main.py  query.py  test.py  test2.py
app/chroma/: client.py  utils.py
app/core/: agent.py  eko_core.py  llm.py  utils.py
app/core/data/: utils.py
app/core/llm/: groq.py  groq_llm.py
app/core/utils/: text.py
app/dev/: logger.py
app/llm/: gemini.py  groq.py  ollama.py
app/tool/: webscrape_wikipedia_tool.py
app/tools/: execute_code_tool.py  execute_js_tool.py  get_system_info_tool.py  open_browser_tool.py  open_calculator_tool.py  post_to_discord_tool.py  webscrape_tool.py
chroma_db/: chroma.sqlite3
