[project]
name = "eko"
version = "0.1.0"
description = ""
authors = [
    {name = "Elton Costa",email = "89019551+ryzxxn@users.noreply.github.com"}
]
readme = "README.md"
requires-python = "^3.10"
dependencies = [
    "groq (>=0.19.0,<0.20.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
